fix editor tab scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -5,8 +5,6 @@
 
 .no-scrollbar::-webkit-scrollbar {
   visibility: hidden;
-}
-.no-scrollbar::-webkit-scrollbar {
   width: 8px;
 }
 
